--- a/app/views/test_executions/_test_info.html.erb
+++ b/app/views/test_executions/_test_info.html.erb
@@ -11,7 +11,7 @@
   <% end %>
   <strong>HQMF ID: </strong><span><%= task.measure_ids.join(',') %></span><br/>
   <% unless task.product_test.is_a? ChecklistTest %>
-    <strong>CMS ID: </strong><span><%= link_to "#{task.product_test_cms_id}", "https://ecqi.healthit.gov/ecqm/measures/#{task.product_test_cms_id}", :target => "_blank" %></span><br/>
+    <strong>CMS ID: </strong><span><%= link_to task.product_test_cms_id, "https://ecqi.healthit.gov/ecqm/measures/#{task.product_test_cms_id.gsub(/\D(\d\d)\D/) { |s| "S0#{$1}v" } }", :target => "_blank" %></span><br/>
   <% end %>
 
   <% # display provider information if the product test is a measure test %>
